# gait

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md
cmake/: GAITDescribe.cmake  ROBOTICSLAB_GAITDescribe.cmake  ROBOTICSLAB_GAITSystem.cmake  cmake_uninstall.cmake.in
cmake/template/: GAITConfig.cmake.in
doc/: groups.dox  main.dox
libraries/: CMakeLists.txt
libraries/Gait/: CMakeLists.txt
src/: CMakeLists.txt  Gait.cpp  Gait.h  GaitLipm.cpp  GaitLipm.h  GaitPatterns.cpp  GaitPatterns.hpp  GaitSupportPoligon.cpp  GaitSupportPoligon.h  Oscillator.cpp  Oscillator.hpp  ZeroMomentPoint.cpp  ZeroMomentPoint.hpp  tools.cpp  tools.h
